--- a/example/browser.html
+++ b/example/browser.html
@@ -25,6 +25,7 @@
     <style>
     body {
         padding: 10px;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
     
     button {
