--- a/example/browser.html
+++ b/example/browser.html
@@ -27,7 +27,7 @@
         padding: 10px;
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
-    
+
     button {
         display: inline-block;
         padding: 6px 12px;
@@ -88,7 +88,13 @@
 <body>
     <div class="content">
         <button @click.prevent="showCalendar=true">唤醒日历</button>
-        <calendar :show-calendar.sync="showCalendar" max-date="3m" start-date="2016-01-21" end-date="2016-01-25"></calendar>
+        <calendar
+            :show-calendar.sync="showCalendar"
+            max-date="4m"
+            start-date="2016-01-21"
+            end-date="2016-01-25"
+            :is-double-check.sync=true
+            ></calendar>
     </div>
     <script type="text/javascript">
     var ef = new Vue({
