--- a/example/browser.html
+++ b/example/browser.html
@@ -93,7 +93,8 @@
             max-date="4m"
             start-date="2016-01-21"
             end-date="2016-01-25"
-            :is-double-check.sync=true
+            :is-double-check.sync=true,
+            :is-vication.sync=true
             ></calendar>
     </div>
     <script type="text/javascript">
